<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".game.BarleyBreak">

    <item
        android:title="@string/action_select"
        android:orderInCategory="100"
        app:showAsAction="always">
    </item>


    <item android:id="@+id/barley_game"
        android:title="@string/action_barley"
        android:orderInCategory="120">
        <menu>
            <item android:id="@+id/action_startNewBarley"
                android:title="@string/action_startBarley"
                android:orderInCategory="10"/>
            <item android:id="@+id/action_exitBarley"
                android:title="@string/action_exitBarley"
                android:orderInCategory="20"/>
        </menu>
    </item>
</menu>