<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="70dp" >


        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathematics"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/enter_background"
            android:padding="20dp"
            android:text="@string/play_button"
            android:textColor="#ff333333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/high_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_button"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/enter_background"
            android:padding="20dp"
            android:text="@string/score_button"
            android:textColor="#ff333333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_button"
            android:id="@+id/exit_button"
            android:layout_below="@id/high_button"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:textColor="#ff333333"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/enter_background"
            android:padding="20dp" />

</RelativeLayout>
