<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/options_background">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mus"
        android:checked="true"
        android:text="@string/music"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/options_size"
        android:textStyle="italic"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:text="@string/back"
        android:textSize="@dimen/option_back"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/back"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SFX"
        android:id="@+id/sfx"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/options_size"
        android:textStyle="italic"
        android:layout_below="@+id/mus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />


</RelativeLayout>